[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter I/ChargeVoltageCurrentQuestions/CurrentQuestions.gd" type="Script" id=2]

[node name="CurrentQuestions" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
color = Color( 0.45098, 0.45098, 0.45098, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 16.3289
margin_top = 9.33081
margin_right = 286.329
margin_bottom = 40.3308
text = "The electrical effects caused by charges in
motion depend on the rateof charge flow,
which is called : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="LineEdit" parent="InstructionLabel" index="0"]
margin_left = 107.323
margin_top = 30.8739
margin_right = 165.323
margin_bottom = 54.8739
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel2" type="Label" parent="." index="3"]
margin_left = 14.0125
margin_top = 79.7753
margin_right = 284.012
margin_bottom = 127.775
text = "Current is charge moved per unit time
I = dq/dt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Charge" type="LineEdit" parent="InstructionLabel2" index="0"]
margin_left = 64.1143
margin_top = -4.56277
margin_right = 122.114
margin_bottom = 19.4372
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="LineEdit" parent="InstructionLabel2" index="1"]
margin_left = 185.0
margin_top = -5.0
margin_right = 261.0
margin_bottom = 19.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="4"]
margin_left = 80.3225
margin_top = 131.765
margin_right = 120.322
margin_bottom = 145.765
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="5"]
margin_left = 14.44
margin_top = 129.96
margin_right = 71.44
margin_bottom = 149.96
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="InstructionLabel/Current" to="." method="_on_Current_text_entered"]
[connection signal="text_entered" from="InstructionLabel2/Charge" to="." method="_on_Charge_text_entered"]
[connection signal="text_entered" from="InstructionLabel2/Time" to="." method="_on_Time_text_entered"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
